--- a/public/stylesheets/bootstrap/style.css
+++ b/public/stylesheets/bootstrap/style.css
@@ -16,12 +16,8 @@ body {
 
 a, a:hover {
 	text-decoration: none;
-	color: #FE5214
-}
-
-h2, h3 {
 	color: #FE5214;
-	text-rendering: optimizelegibility;
+	cursor:pointer;
 }
 
 h1 {
