--- a/views/mypage.html
+++ b/views/mypage.html
@@ -79,8 +79,7 @@
 					<div class="pop-conts">
 						<form action="/search" method="get" class="sfm" align="center">
 							<input type="text" name="q" value="" id="sf" />
-							<input
-							type="image" value="Search" src="/images/zoom19.png" id="sb" />
+							<input type="image" value="Search" src="/images/zoom19.png" id="sb" />
 						</form>
 						<table>
 							<tr>
