--- a/views/groupHome.html
+++ b/views/groupHome.html
@@ -66,21 +66,20 @@
 			<div class="navbar">
 				<div class="nav-collapse">
 					<ul class="nav">
-						<li><a href="#homeSection">HOME</a></li>
-						<li class="dropdown"><a href="#boardSection"
-							class="dropdown-toggle" data-toggle="dropdown">BOARD</a>
+						<li><a href="#" id="btnHome">HOME</a></li>
+						<li class="dropdown"><a href="#boardSection" class="dropdown-toggle" data-toggle="dropdown">BOARD</a>
 							<ul class="dropdown-menu">
 								<li><a class="freeboard">자유게시판</a></li>
 								<li><a href="#">익명게시판</a></li>
-							</ul></li>
-						<li><a href="#familySection">FAMILY</a></li>
-						<li class="dropdown"><a href="#settingSection"
-							class="dropdown-toggle" data-toggle="dropdown">SETTING</a>
-						<ul class="dropdown-menu">
+							</ul>
+						</li>
+						<li><a href="#" id="btnFamily">FAMILY</a></li>
+						<li class="dropdown"><a href="#settingSection"class="dropdown-toggle" data-toggle="dropdown">SETTING</a>
+							<ul class="dropdown-menu">
 								<li><a href="#" id="btnSettingMember">멤버관리</a></li>
-								<li><a href="#">그룹관리</a></li>
-								<li><a href="#">게시판관리</a></li>
-							</ul></li>
+								<li><a href="#" id="btnSettingBoard">게시판관리</a></li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 			</div>
