--- a/views/groupSetting_board.html
+++ b/views/groupSetting_board.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="/stylesheets/bootstrap/jqx.base.css" type="text/css" />
 <link rel="stylesheet" href="/stylesheets/group.css" type="text/css" />
 
-<link rel="stylesheet" href="/stylesheets/settingBoard.css" type="text/css" media="screen" charset="utf-8" />
+<link rel="stylesheet" href="/stylesheets/groupSetting_board.css" type="text/css" media="screen" charset="utf-8" />
 
 
 <script src="/javascripts/bootstrap/jquery-1.9.1.min.js"></script>											<!-- theme js files -->
@@ -24,7 +24,7 @@
 <script src="/javascripts/bootstrap/jquery.easing-1.3.min.js"></script>
 <script src="/javascripts/bootstrap/default.js"></script>
 
-<script type="text/javascript" src="/javascripts/settingBoard.js"></script>
+<script type="text/javascript" src="/javascripts/groupSetting_board.js"></script>
 
 </head>
 <body>
@@ -60,26 +60,25 @@
 
 		<div class="container">
 			<div class="span3 logo">
-				<a href="#"><img src="../public/images/logo1.png" alt="" /></a>
+				<a href="#"><img src="/images/logo1.png" alt="" /></a>
 			</div>
 
 			<div class="navbar">
 				<div class="nav-collapse">
 					<ul class="nav">
-						<li><a href="#homeSection">HOME</a></li>
+						<li><a href="#homeSection" id="btnHome">HOME</a></li>
 						<li class="dropdown"><a href="#boardSection"
 							class="dropdown-toggle" data-toggle="dropdown">BOARD</a>
 							<ul class="dropdown-menu">
-								<li><a href="#">자유게시판</a></li>
+								<li><a href="#" class="freeboard">자유게시판</a></li>
 								<li><a href="#">익명게시판</a></li>
 							</ul></li>
-						<li><a href="#familySection">FAMILY</a></li>
+						<li><a href="#familySection" id="btnFamily">FAMILY</a></li>
 						<li class="dropdown"><a href="#settingSection"
 							class="dropdown-toggle" data-toggle="dropdown">SETTING</a>
 						<ul class="dropdown-menu">
-								<li><a href="#">멤버관리</a></li>
-								<li><a href="#">그룹관리</a></li>
-								<li><a href="#">게시판관리</a></li>
+								<li><a href="#" id="btnSettingMember">멤버관리</a></li>
+								<li><a href="#" id="btnSettingBoard">게시판관리</a></li>
 							</ul></li>
 					</ul>
 				</div>
