--- a/views/groupHome.html
+++ b/views/groupHome.html
@@ -117,8 +117,43 @@
 			<a href="#"><button type="button" class="btnSendmessage">+</button></a>
 		</div>
 		<div>
-			<form class="formMessagebox" style="overflow: hidden;" action="./" method="">
+			<form class="formMessagebox" action="./" method="">
 				<table>
+					<tr>
+						<td colspan="2" class="contMessage">
+							<span class="dateMessagebox">15.02.21</span>
+							<span><a href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
+							<span><a href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="2" class="contMessage">
+							<span class="dateMessagebox">15.02.21</span>
+							<span><a href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
+							<span><a href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="2" class="contMessage">
+							<span class="dateMessagebox">15.02.21</span>
+							<span><a href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
+							<span><a href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="2" class="contMessage">
+							<span class="dateMessagebox">15.02.21</span>
+							<span><a href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
+							<span><a href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="2" class="contMessage">
+							<span class="dateMessagebox">15.02.21</span>
+							<span><a href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
+							<span><a href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
+						</td>
+					</tr>
 					<tr>
 						<td colspan="2" class="contMessage">
 							<span class="dateMessagebox">15.02.21</span>
@@ -135,7 +170,7 @@
 			<a href="#"><button type="button" class="btnSendmessage">+</button></a>
 		</div>
 		<div>
-			<form class="formMessagebox" style="overflow: hidden;" action="./" method="">
+			<form class="formMessagebox" action="./" method="">
 				<table>
 					<tr>
 						<td colspan="2" class="contMessage">
