--- a/views/mypage.html
+++ b/views/mypage.html
@@ -178,7 +178,7 @@
 				MY LIST
 			</div>
 			<div>
-				<form id="form" style="overflow: hidden;" action="./" method="">
+				<form class="form" style="overflow: hidden;" action="./" method="">
 					<div id="my_group_list"></div>
 				</form>
 			</div>
@@ -186,7 +186,7 @@
 				WAITING LIST
 			</div>
 			<div>
-				<form id="form" style="overflow: hidden;" action="./" method="">
+				<form class="form" style="overflow: hidden;" action="./" method="">
 					<div id="waitingList"></div>
 				</form>
 			</div>
