--- a/views/groupBoard.html
+++ b/views/groupBoard.html
@@ -150,7 +150,7 @@
 					<li><a href="#">5</a></li>
 					<li><a href="#">»</a></li>
 				</ul>
-				<a class="btn btn-primary">글쓰기</a>
+				<a class="btn btn-primary" id="btnWritingBoard">글쓰기</a>
 			</div>
 	</div>
 	<div id="searchbox">
