--- a/views/groupBoard_writing.html
+++ b/views/groupBoard_writing.html
@@ -16,7 +16,7 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.5.js"></script>
 
-		<script type="text/javascript" src="/javascripts/mypage.js"></script>
+		<script type="text/javascript" src="/javascripts/groupBoard_writing.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap/bootstrap.min.css" media="screen" charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap/bootstrap-responsive.min.css">
@@ -58,20 +58,20 @@
 			<div class="navbar">
 				<div class="nav-collapse">
 					<ul class="nav">
-						<li><a href="#homeSection" id="btnFamily">HOME</a></li>
-						<li class="dropdown"><a href="#boardSection"
-							class="dropdown-toggle" data-toggle="dropdown">BOARD</a>
+						<li><a href="#" id="btnHome">HOME</a></li>
+						<li class="dropdown"><a href="#boardSection"class="dropdown-toggle" data-toggle="dropdown">BOARD</a>
 							<ul class="dropdown-menu">
 								<li><a href="#" class="freeboard">자유게시판</a></li>
 								<li><a href="#">익명게시판</a></li>
-							</ul></li>
+							</ul>
+						</li>
 						<li><a href="#familySection" id="btnFamily">FAMILY</a></li>
-						<li class="dropdown"><a href="#settingSection"
-							class="dropdown-toggle" data-toggle="dropdown">SETTING</a>
-						<ul class="dropdown-menu">
-							<li><a href="#" id="btnSettingMember">멤버관리</a></li>
-							<li><a href="#" id="btnSettingBoard">게시판관리</a></li>
-						</ul></li>
+						<li class="dropdown"><a href="#settingSection" class="dropdown-toggle" data-toggle="dropdown">SETTING</a>
+							<ul class="dropdown-menu">
+								<li><a href="#" id="btnSettingMember">멤버관리</a></li>
+								<li><a href="#" id="btnSettingBoard">게시판관리</a></li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 			</div>
