--- a/views/mypage.html
+++ b/views/mypage.html
@@ -77,22 +77,16 @@
 			<div id="search_group_popup" class="pop-layer">
 				<div class="pop-container">
 					<div class="pop-conts">
-						<form action="/search" method="get" class="sfm" align="center">
+						<form action="./" method="" class="sfm" align="center">
 							<input type="text" name="q" value="" id="sf" />
-							<input type="image" value="Search" src="/images/zoom19.png" id="sb" />
+							<a href="#" id="sb" type="button"><img src="/images/zoom19.png" /></a>
 						</form>
-						<table>
-							<tr>
-								<td class="group_name">Comedu</td>
-								<td class="group_info">SKKU computer education dept</td>
-							</tr>
-							<tr>
-
-							</tr>
-						</table>
+						<div id="searchGroupResult">
+						</div>
 						<div class="okclosebtn">
 							<a href="#" class="cbtn">Close</a>
 						</div>
+						<div id="templates_2" style="display: none;"></div>
 					</div>
 				</div>
 			</div>
