--- a/public/template/searchGroup.html
+++ b/public/template/searchGroup.html
@@ -8,7 +8,7 @@
 				{{descript}}
 			</td>
 			<td class="del_group"><a href="#" type="button">
-				<button>apply</button>
+				<button>join</button>
 			</td>
 		</tr>
 	</table>
