--- a/views/mypage.html
+++ b/views/mypage.html
@@ -78,7 +78,7 @@
 				<div class="pop-container">
 					<div class="pop-conts">
 						<form action="./" method="" class="sfm" align="center">
-							<input type="text" name="q" value="" id="sf" />
+							<input type="text" value="" id="sf" placeholder="group name"/>
 							<a href="#" id="sb" type="button"><img src="/images/zoom19.png" /></a>
 						</form>
 						<div id="searchGroupResult">
