--- a/public/stylesheets/mypage.css
+++ b/public/stylesheets/mypage.css
@@ -198,12 +198,12 @@ a.cbtn:hover, a.okbtn:hover {
 	background-color: #f5f5f5;
 	font-size: 14px;
 	border: 0px;
-	text-transform: uppercase;
 	margin-top: 0px;
 	color: #999;
 	letter-spacing: 1px;
 	padding: 4px 8px;
 	font-family: calibri, helvetica, arial;
+	height: 12%
 }
 
 #sb {
@@ -211,10 +211,14 @@ a.cbtn:hover, a.okbtn:hover {
 	vertical-align: top;
 }
 
-#sf {
-	background:
-		url('http://static.tumblr.com/f1skqpy/Oxbn13qun/search_icon.png')
-		#f5f5f5 left center no-repeat;
-	background-size: 25px 25px;
-	color: black;
+#sb img {
+	height: 6%;
+	width: 6%;
+}
+
+#searchGroupResult {
+	overflow-y:scroll;
+	max-height: 160px;
+	table-layout: fixed;
+	word-wrap: break-word
 }
