--- a/views/groupSetting_board.html
+++ b/views/groupSetting_board.html
@@ -23,6 +23,8 @@
 <script src="/javascripts/bootstrap/jquery.scrollTo-1.4.3.1-min.js" type="text/javascript"></script>
 <script src="/javascripts/bootstrap/jquery.easing-1.3.min.js"></script>
 <script src="/javascripts/bootstrap/default.js"></script>
+		<script type="text/javascript" src="/javascripts/mustache/mustache.js"></script>
+
 
 <script type="text/javascript" src="/javascripts/groupSetting_board.js"></script>
 
@@ -76,7 +78,7 @@
 						<li><a href="#familySection" id="btnFamily">FAMILY</a></li>
 						<li class="dropdown"><a href="#settingSection"
 							class="dropdown-toggle" data-toggle="dropdown">SETTING</a>
-						<ul class="dropdown-menu">
+							<ul class="dropdown-menu">
 								<li><a href="#" id="btnSettingMember">멤버관리</a></li>
 								<li><a href="#" id="btnSettingBoard">게시판관리</a></li>
 							</ul></li>
@@ -87,53 +89,45 @@
 	</div>
 
 
-<!-- -------------------------------------------------------------Setting Contents Section begins------------------------------------------------- -->
+	<!-- -------------------------------------------------------------Setting Contents Section begins------------------------------------------------- -->
 
-<div id="containerSetting">
-	
-<!-- --------------------------------------------------------Board List begins------------------------------------------------ -->
+	<div id="containerSetting">
 
-<div id="SettingBoardSection">
-	<div id="titleSettingBoard">
-		- 게시판관리
-	</div>
-	<div id="boardSetting">
-		<div id="listBoard">
-			<ul class="nav">
-				<div class="contBoard">자유게시판<input type ="checkbox" class="selectBoard" value="0" checked></div>
-				<div class="contBoard">익명게시판<input type ="checkbox" class="selectBoard" value="0" checked></div>
-			</ul>
-		</div>
-	</div>
-	<div>
-		<button type="button" id="btnRomove">삭제</button>
-	</div>
-</div>
+		<!-- --------------------------------------------------------Board List begins------------------------------------------------ -->
 
-<!-- --------------------------------------------------------Add Board begins------------------------------------------------ -->
-
-<div id="addBoardSection">
-	<div id="titleAddBoard">
-		게시판 추가
-	</div>
-	<div id="boardAdd">
-		<div id="contBoardAdd">
-			<div>
-				<span id="boardName">게시판명</span>
-				<span><input id="boardnameData" type="text"/></span>
+		<div id="SettingBoardSection">
+			<div id="titleSettingBoard">- 게시판관리</div>
+			<div id="boardSetting">
+				<div id="listBoard"></div>
 			</div>
 			<div>
-				<span id="boardForm">형태</span>
-				<span class="selectBoardForm"><input type="checkbox"/>실명</span>
-				<span class="selectBoardForm"><input type="checkbox"/>익명</span>
+				<button type="button" id="btnRomove">삭제</button>
+			</div>
+			<div id="templates_3" style="display: none;"></div>
+		</div>
+
+		<!-- --------------------------------------------------------Add Board begins------------------------------------------------ -->
+
+		<div id="addBoardSection">
+			<div id="titleAddBoard">게시판 추가</div>
+			<div id="boardAdd">
+				<div id="contBoardAdd">
+					<div>
+						<span id="boardName">게시판명</span> <span><input
+							id="boardnameData" type="text" /></span>
+					</div>
+					<div>
+						<span id="boardForm">형태</span> <span class="selectBoardForm"><input
+							type="checkbox" />실명</span> <span class="selectBoardForm"><input
+							type="checkbox" />익명</span>
+					</div>
+				</div>
+				<div>
+					<button type="button" id="btnAdd">추가</button>
+				</div>
 			</div>
 		</div>
-	<div>
-		<button type="button" id="btnAdd">추가</button>
-	</div>
-	</div>
-</div>
 
-</div>
+	</div>
 </body>
 </html>
