--- a/views/groupHome.html
+++ b/views/groupHome.html
@@ -106,6 +106,7 @@
 			<input class="detailinputProfile" type="text" placeholder="E-mail address" required/><br>
 			<input class="detailinputProfile" type="text" placeholder="Contact Number" required/>
 			<button type="button" id="btnSaveprofile">save</button>
+			<button type="button" id="btnImageUpload">사진 업로드</button>
 		</div>
 	</div>
 
@@ -238,6 +239,23 @@
 						</TABLE>
 						<div class="btnOkclose">
 							<a href="#" id="btnRvdmessageok" class="btnOk">Complete</a><a href="#" class="btnClose">Close</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+<!-- --------------------------------------------------Image Upload layer------------------------------------------------------------ -->
+		<div class="layer3">
+			<div class="background"></div>
+			<div id="popupImageUpload" class="poplayerUpload">
+				<div class="pop_containerSendmessage">
+					<div class="pop-contsSendmessage">
+						<TABLE class="contSendmessage">
+							<input id="imageUpload" type="file" multiple>
+						</TABLE>
+						<div class="btnOkclose">
+							<a href="#" id="btnUploadok" class="btnOk">업로드</a><a href="#" class="btnClose">취소</a>
 						</div>
 					</div>
 				</div>
