--- a/views/groupBoard_writing.html
+++ b/views/groupBoard_writing.html
@@ -86,7 +86,7 @@
 				</td>
 				<td>
 					<div class="col-sm-10">
-						<textarea class="form-control" rows="1"></textarea>
+						<textarea id="titlePosting" class="form-control" rows="1"></textarea>
 					</div>
 				</td>
 			</tr>
@@ -95,7 +95,7 @@
 				</td>
 				<td>
 					<div class="col-sm-10">
-						<textarea class="form-control" rows="12"></textarea>
+						<textarea id="contentPosting" class="form-control" rows="12"></textarea>
 					</div>
 				</td>
 			</tr>
@@ -109,8 +109,8 @@
 			</tr>
 			<tr>
 				<td colspan="2">
-					<a href="#" class="btn btn-primary">목록</a>
-					<a href="#" class="btn btn-primary">확인</a>
+					<a href="#" class="btn btn-primary" id="btnLoadList">목록</a>
+					<a href="#" class="btn btn-primary" id="btnWriteBoard">확인</a>
 					<a href="#" class="btn btn-primary">수정</a>
 				</td>
 			</tr>
