word-break complete!

--- a/public/template/GroupList.html
+++ b/public/template/GroupList.html
@@ -1,5 +1,5 @@
 <div id="template1">
-	<table>
+	<table style="table-layout: fixed;">
 		<tr>
 			<td class="group_name">
 				<a href="" class="group_name" id="{{groups}}" type="button" onclick="moveGroup(this.id)">{{groups}}</a>
