--- a/public/stylesheets/mypage.css
+++ b/public/stylesheets/mypage.css
@@ -63,16 +63,26 @@ groupselect {
 }
 
 .group_name{
-	padding: 2px 10px;
-	width: 105px;
-	table-layout:fixed;
-	word-break:break-all;
+	padding: 0px 7px;
+	width: 75px;
+	max-width: 75px;
+	min-width: 75px;
 	color: black;
+	text-overflow:ellipsis;
+	overflow:hidden;
+	white-space:nowrap;
+	table-layout:fixed;
 }
 .group_info{
 	padding: 2px 10px;
-	width: 260px;
-	padding-right: 5px
+	width: 250px;
+	max-width: 250px;
+	min-width: 250px;
+	padding-right: 5px;
+	text-overflow:ellipsis;
+	overflow:hidden;
+	white-space:nowrap;
+	table-layout:fixed;
 }
 
 #group_form img{
@@ -83,9 +93,12 @@ groupselect {
 .del_group{
 	padding: 2px 10px;
 	float: right;
-	height: 40px;
-	width: 40px;
-	table-layout: fixed
+	height: 35px;
+	width: 35px;
+	text-overflow:ellipsis;
+	overflow:hidden;
+	white-space:nowrap;
+	table-layout:fixed;
 }
 /* -----------------------------------------------------------------------group table------------------------------------------------ */
 #grouptable {
@@ -169,6 +182,10 @@ groupselect {
 	text-align: right;
 }
 
+#search_group_popup {
+	width: 480px
+}
+
 a.cbtn, a.okbtn {
 	margin-right: 30px;
 	display: inline-block;
@@ -219,6 +236,6 @@ a.cbtn:hover, a.okbtn:hover {
 #searchGroupResult {
 	overflow-y:scroll;
 	max-height: 160px;
+	max-width: 100%;
 	table-layout: fixed;
-	word-wrap: break-word
 }
