--- a/public/template/searchGroup.html
+++ b/public/template/searchGroup.html
@@ -1,8 +1,8 @@
 <div id="groupSearch">
-	<table>
+	<table style="table-layout: fixed;">
 		<tr>
 			<td class="group_name">
-				<a href="" class="group_name" type="button">{{groups}}</a>
+				{{groups}}
 			</td>
 			<td class="group_info">
 				{{descript}}
