--- a/views/groupHome.html
+++ b/views/groupHome.html
@@ -101,10 +101,10 @@
 		<div id="detailProfile">
 			<strong><input id="nameinputProfile" type="text" placeholder="name" required/></strong><br>
 			<input id="jobinputProfile" type="text" placeholder="job or grade" required/>
-			<input class="detailinputProfile" type="text" placeholder="Age" required/><br>
-			<input class="detailinputProfile" type="text" placeholder="Living Place" required/><br>
-			<input class="detailinputProfile" type="text" placeholder="E-mail address" required/><br>
-			<input class="detailinputProfile" type="text" placeholder="Contact Number" required/>
+			<input id="age" class="detailinputProfile" type="text" placeholder="Age" required/><br>
+			<input id="place" class="detailinputProfile" type="text" placeholder="Living Place" required/><br>
+			<input id="email" class="detailinputProfile" type="text" placeholder="E-mail address" required/><br>
+			<input id="contact" class="detailinputProfile" type="text" placeholder="Contact Number" required/>
 			<button type="button" id="btnSaveprofile">save</button>
 			<button type="button" id="btnImageUpload">사진 업로드</button>
 		</div>
@@ -122,44 +122,16 @@
 				<table>
 					<tr>
 						<td colspan="2" class="contMessage">
-							<span class="dateMessagebox">15.02.21</span>
-							<span><a href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
-							<span><a href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
+							<span id="rvdDate" class="dateMessagebox">15.02.21</span>
+							<span><a id="rvdTitle" href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
+							<span><a id="rvdSender" href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
 						</td>
 					</tr>
 					<tr>
 						<td colspan="2" class="contMessage">
-							<span class="dateMessagebox">15.02.21</span>
-							<span><a href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
-							<span><a href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="2" class="contMessage">
-							<span class="dateMessagebox">15.02.21</span>
-							<span><a href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
-							<span><a href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="2" class="contMessage">
-							<span class="dateMessagebox">15.02.21</span>
-							<span><a href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
-							<span><a href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="2" class="contMessage">
-							<span class="dateMessagebox">15.02.21</span>
-							<span><a href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
-							<span><a href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="2" class="contMessage">
-							<span class="dateMessagebox">15.02.21</span>
-							<span><a href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
-							<span><a href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
+							<span id="rvdDate" class="dateMessagebox">15.02.21</span>
+							<span><a id="rvdTitle" href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
+							<span><a id="rvdSender" href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
 						</td>
 					</tr>
 				</table>
@@ -175,9 +147,9 @@
 				<table>
 					<tr>
 						<td colspan="2" class="contMessage">
-							<span class="dateMessagebox">15.02.21</span>
-							<span><a href="#" class="textMessagebox">박다솜씨</a></span>
-							<span><a href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
+							<span id="sendDate" class="dateMessagebox">15.02.21</span>
+							<span><a id="sendTitle" href="#" class="textMessagebox">박다솜씨</a></span>
+							<span><a id="sendReceiver" href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
 						</td>
 					</tr>
 				</table>
