--- a/public/template/searchGroup.html
+++ b/public/template/searchGroup.html
@@ -7,8 +7,10 @@
 			<td class="group_info">
 				{{descript}}
 			</td>
-			<td class="del_group"><a href="#" type="button">
-				<button>join</button>
+			<td class="del_group">
+				<a href="#" type="button" id="{{groups}}" onclick="joinGroup(this.id)">
+					<button>join</button>
+				</a>
 			</td>
 		</tr>
 	</table>
