--- a/views/groupHome.html
+++ b/views/groupHome.html
@@ -119,22 +119,7 @@
 		</div>
 		<div>
 			<form class="formMessagebox" action="./" method="">
-				<table>
-					<tr>
-						<td colspan="2" class="contMessage">
-							<span id="rvdDate" class="dateMessagebox">15.02.21</span>
-							<span><a id="rvdTitle" href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
-							<span><a id="rvdSender" href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="2" class="contMessage">
-							<span id="rvdDate" class="dateMessagebox">15.02.21</span>
-							<span><a id="rvdTitle" href="#" class="textMessagebox">안녕하세요 박다솜씨</a></span>
-							<span><a id="rvdSender" href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
-						</td>
-					</tr>
-				</table>
+				<div id="Received_Message_List"></div>
 			</form>
 		</div>
 		<div class="titleMessagebox">
@@ -144,17 +129,10 @@
 		</div>
 		<div>
 			<form class="formMessagebox" action="./" method="">
-				<table>
-					<tr>
-						<td colspan="2" class="contMessage">
-							<span id="sendDate" class="dateMessagebox">15.02.21</span>
-							<span><a id="sendTitle" href="#" class="textMessagebox">박다솜씨</a></span>
-							<span><a id="sendReceiver" href="#" class="sendpersonMessagebox"><strong>아저씨</strong></a></span>
-						</td>
-					</tr>
-				</table>
+				<div id="Send_Message_List"></div>
 			</form>
 		</div>
+		<div id="templates_1" style="display: none;"></div>
 	</div>
 
 <!-- --------------------------------------------------send message layer------------------------------------------------------------ -->
