--- a/views/groupSetting_member.html
+++ b/views/groupSetting_member.html
@@ -182,8 +182,26 @@
 					(<span class="IDRequest">epfptk423@naver.com</span>)을 승인하시겠습니까?
 				</div>
 				<div class="btnOkclose">
-					<a href="#" class="btnOk">수락</a>
+					<a href="#" id="btnAcceptConfirm" class="btnOk">수락</a>
 					<a href="#" class="btnClose">취소</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- --------------------------------------------------------Wating Member Accept-Confirm layer------------------------------------------------ -->
+<div class="layer1_1">
+	<div class="background"></div>
+	<div id="popupAcceptConfirm" class="poplayerAccept">
+		<div class="pop_containerAccept">
+			<div class="pop-contsAccept">
+				<div class="messageAccept">
+					<span class="nameRequest">남예빈</span>
+					(<span class="IDRequest">epfptk423@naver.com</span>)이 수락되었습니다.
+				</div>
+				<div class="btnOkclose">
+					<a href="#" class="btnClose">확인</a>
 				</div>
 			</div>
 		</div>
@@ -201,8 +219,26 @@
 					(<span class="IDRequest">epfptk423@naver.com</span>)을 거절하시겠습니까?
 				</div>
 				<div class="btnOkclose">
-					<a href="#" class="btnOk">거절</a>
+					<a href="#" id="btnRefuseConfirm" class="btnOk">거절</a>
 					<a href="#" class="btnClose">취소</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- --------------------------------------------------------Wating Member Refuse Confirm layer------------------------------------------------ -->
+<div class="layer2_1">
+	<div class="background"></div>
+	<div id="popupRefuseConfirm" class="poplayerRefuse">
+		<div class="pop_containerRefuse">
+			<div class="pop-contsRefuse">
+				<div class="messageRefuse">
+					<span class="nameRequest">남예빈</span>
+					(<span class="IDRequest">epfptk423@naver.com</span>)을 거절했습니다.
+				</div>
+				<div class="btnOkclose">
+					<a href="#" class="btnClose">확인</a>
 				</div>
 			</div>
 		</div>
@@ -220,8 +256,26 @@
 					(<span class="IDRequest">epfptk423@naver.com</span>)을 새로운 관리자로 위임하시겠습니까?
 				</div>
 				<div class="btnOkclose">
-					<a href="#" class="btnOk">위임</a>
+					<a href="#" id="btnAuthorizeConfirm" class="btnOk">위임</a>
 					<a href="#" class="btnClose">취소</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- --------------------------------------------------------Group Member Authorize Confirm layer------------------------------------------------ -->
+<div class="layer3_1">
+	<div class="background"></div>
+	<div id="popupAuthorizeConfirm" class="poplayerAuthorize">
+		<div class="pop_containerAuthorize">
+			<div class="pop-contsAuthorize">
+				<div class="messageAuthorize">
+					<span class="nameRequest">남예빈</span>
+					(<span class="IDRequest">epfptk423@naver.com</span>)을 새로운 관리자로 위임했습니다.
+				</div>
+				<div class="btnOkclose">
+					<a href="#" class="btnClose">확인</a>
 				</div>
 			</div>
 		</div>
@@ -239,8 +293,26 @@
 					(<span class="IDRequest">epfptk423@naver.com</span>)을 탈퇴시키겠습니까?
 				</div>
 				<div class="btnOkclose">
-					<a href="#" class="btnOk">탈퇴</a>
+					<a href="#" id="btnSignoutConfirm" class="btnOk">탈퇴</a>
 					<a href="#" class="btnClose">취소</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- --------------------------------------------------------Group Member Signout Confirm layer------------------------------------------------ -->
+<div class="layer4_1">
+	<div class="background"></div>
+	<div id="popupSignoutConfirm" class="poplayerSignout">
+		<div class="pop_containerSignout">
+			<div class="pop-contsSignout">
+				<div class="messageSignout">
+					<span class="nameRequest">남예빈</span>
+					(<span class="IDRequest">epfptk423@naver.com</span>)이 탈퇴처리 되었습니다.
+				</div>
+				<div class="btnOkclose">
+					<a href="#" class="btnClose">확인</a>
 				</div>
 			</div>
 		</div>
