--- a/views/groupHome.html
+++ b/views/groupHome.html
@@ -17,7 +17,7 @@
 
 <link rel="stylesheet" href="/stylesheets/groupHome.css" type="text/css" media="screen" charset="utf-8" />
 
-
+<script type="text/javascript" src="/javascripts/mustache/mustache.js"></script>
 <script src="/javascripts/bootstrap/jquery-1.9.1.min.js"></script>											<!-- theme js files -->
 <script src="/javascripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
 <script src="/javascripts/bootstrap/jquery.scrollTo-1.4.3.1-min.js" type="text/javascript"></script>
